fix: flexbox break on some browsers

--- a/src/app/search/search/search.component.scss
+++ b/src/app/search/search/search.component.scss
@@ -6,5 +6,5 @@
 }
 
 app-result {
-  min-height: calc(100% - 72px);
+  flex: 1;
 }
