--- a/src/app/shared/message/message.component.scss
+++ b/src/app/shared/message/message.component.scss
@@ -5,4 +5,5 @@
   flex-direction: column;
   color: white;
   height: 100%;
+  padding: 10px 0;
 }
